syntax = "proto3";
package admin;

option go_package = "admin/v1/auth;admin";

import "third_party/tagger/tagger.proto";

message DeleteUserRequest {
  string user_id = 1 [(tagger.tags) = "form:\"user_id\""];
}

message DeleteUserResponse {

}
